--- a/input.css
+++ b/input.css
@@ -1,3 +1,18 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@import url('https://fonts.googleapis.com/css2?family=Epilogue&display=swap');
+
+@font-face {
+  font-family: 'Epilogue';
+  src: 'url(https://fonts.googleapis.com/css2?family=Epilogue&display=swap)';
+  font-weight: 500;
+  font-size: 18px;
+}
+
+@layer-base {
+  html {
+    font-family: 'Epilogue', sans-serif, system-ui;
+  }
+}
