--- a/input.css
+++ b/input.css
@@ -18,6 +18,7 @@
 } */
 body{
   background-color: hsl(0, 0%, 98%);
+  position: relative;
   margin: auto;
 }
 #header{
@@ -40,14 +41,102 @@ nav {
 #menu-btn{
     float: right;
 }
-#menu{
-    display: none;
+#menuM{
+  position: absolute;
+  top: 7%;
+  left: 40%;
+  margin: 0;
+  align-content: center;
+  background: hsl(0, 0%, 98%);
+  
+  height: 100%;
+  z-index: 1;
+  width: 60%;
+  box-shadow: 0 1em 20em 20em hsla(0,0%,8%,0.8);
+}
+#menuCont{
+  z-index: 3;
+  position: relative;
+  margin: 10%;
+  font-size: 1.5rem;
+  /* display: flex; */
+  /* flex-direction: column; */
+}
+#menuCont .navLink1{
+  margin: 5%;
+  color: hsl(0, 0%, 41%);
+}
+#menuCont button{
+  margin: 5% 0;
+  font-size: 1.5rem;
+}
+#menuCont #reg{
+  box-sizing: border-box;
+  padding: .7rem 5rem;
+  background: none;
+  border-color: black;
+  border-radius: .5em;
+}
+#menuCont #nav1{
+  display: flex;
+  background: none;
+  flex-direction: column;
+  flex: 2 1 auto;
+  justify-content: space-between;
+  align-items: start;
+  margin: auto;
+}
+#menuCont #cta{
+  display: flex;
+  background: none;
+  flex-direction: column;
+  flex: 2 1 auto;
+  justify-content: space-between;
+  align-items: center;
+  margin: auto;
+}
+.nav-m{
+    position: static;
+    display: flex;
+    text-indent: 0;
+    flex-direction: column;
+    height: auto;
+    background: hsl(0, 0%, 98%);
+    border-radius: .5rem;
+    padding: .2rem 2rem;
+    list-style: none;
+    margin-bottom: .5rem;
+    margin-left: .5rem;
+  }
+.navm{
+  margin-bottom: 1rem;
+  font-size: 1.2rem;
+}
+
+.navLink:hover, .navLink1{
+  color: hsl(0, 0%, 8%);
+}
+#login{
+  background: none;
+  border: none;
+  margin-right: 2em;
+}
+#reg{
+  box-sizing: border-box;
+  padding: 1em 2em;
+  background: none;
+  border-color: black;
+  border-radius: 3em;
+}
+#reg:hover{
+  transform: scale(1.2);
 }
 
 #main{
     display: relative;
 }
 #body{
+    position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -59,6 +148,8 @@ nav {
 }
 
 #textCTA{
+  display: grid;
+  grid-template-rows: repeat(3, auto);
   margin: 4em auto;
 }
 #textCTA h1{
@@ -83,11 +174,22 @@ nav {
   color: black;
   border-color: black;
 }
+#partners{
+  position: relative;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: 1fr;
+    grid-gap: 0%;
+    margin-top: 2em;
+  }
 .partner{
   flex-direction: row;
   justify-self: between;
-  margin-right: 2.25em;
-  margin-bottom: 3em;
+  align-self: center;
+  padding: 1rem;
+  margin: auto;
+  /* margin-right: 2.25em; */
+  /* margin-bottom: 3em; */
 }
 #hero2{
   display: none;
@@ -96,12 +198,11 @@ nav {
   display: inline;
 }
 
-
-.nav-2{
-  position: relative;
-  display: flex;
-  flex-basis: column nowrap;
+.hidden{
+  display: none;
 }
+
+
 @media (min-width: 768px){
   #menu-btn{
     display: none;
@@ -113,21 +214,49 @@ nav {
     padding: 3em auto 3em 3em;
   }
   #menu{
+    position: static;
     display: flex;
     flex-direction: row;
     flex: 2 1 auto;
     justify-content: space-between;
     margin: auto 2em;
-    align-content: center;
+    align-self: stretch;
+    background: none; 
   }
   .navLink{
     margin-right: 2em;
   }
-  .navLink:hover{
-    color: hsl(0, 0%, 8%);
+  .subnav{
+    position: absolute;
+    display: block;
+    z-index: 1;
   }
-  #menu #cta{
-    
+  .n1{
+    left: 10%;
+  }
+  .n2{
+    left: 26%;
+  }
+  .nav-2{
+    position: relative;
+    display: flex;
+    text-indent: 0;
+    flex-direction: column;
+    height: auto;
+    background: white;
+    border-radius: .5rem;
+    padding: .8em .8em;
+    list-style: none;
+    box-shadow: 0 1em 2em 0 hsla(0,0%,70%,0.4);
+  }
+  .nav-2 span{
+    flex-direction: row;
+  }
+  .nav2{
+    margin: .5rem;
+  }
+  .nav2 img{
+    margin-right: .5em;
   }
   #login{
     background: none;
@@ -136,47 +265,44 @@ nav {
   }
   #reg{
     box-sizing: border-box;
-    padding: 1em 2em;
+    padding: .5rem 2em;
     background: none;
     border-color: black;
     border-radius: 3em;
   }
-  #reg:hover{
-    transform: scale(1.2);
-  }
   
   #main{
-    display: flex;
-    flex-flow: row-reverse nowrap;
-    align-content: center;
-    margin: auto 15%;
+    position: relative;
+    box-sizing: border-box;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 1em;
+    direction: rtl;
+    width:80%;
+    margin: auto;
+    padding: 2%;
   }
   
   #textCTA{
     margin: auto auto;
-    padding-right: 1em;
     text-align: left;
     position: relative;
   }
   #textCTA h1{
-    /* text-align: center; */
     font-size: 3.5em;
     margin-bottom: 1.5rem;
-    /* padding-right: 2%; */
+    padding-right: 35%;
   }
   #textCTA p{
     font-size: 18px;
     color: hsl(0, 0%, 41%);
     margin-bottom: 1.5em;
+    margin-right: 10%;
   }
-  .partner{
-    flex-direction: column;
-    position: relative;
-    justify-content: space-between;
-    margin-right: .2em;
-    /* margin-top: .5em; */
-    float: left;
-  }
+.partner{
+  justify-content: space-between;
+  padding-right: 1em;
+} 
   
   #hero2{
     display: inline;
@@ -184,4 +310,12 @@ nav {
   #hero1{
     display: none;
   }
+}
+  
+  
+  
+
+
+.hidden{
+  display: none;
 }
